@@ -19,6 +19,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #22721: An order of multiline pprint output of set or dict containing
+  orderable and non-orderable elements no longer depends on iteration order of
+  set or dict.
+
 - Issue #15133: _tkinter.tkapp.getboolean() now supports Tcl_Obj and always
   returns bool.  tkinter.BooleanVar now validates input values (accepted bool,
   int, str, and Tcl_Obj).  tkinter.BooleanVar.get() now always returns bool.
